k8's/wordpress-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 2
  selector:
    matchLabels:
      app: wordpress
  template:
    metadata:
      labels:
        app: wordpress
    spec:
      containers:
      - name: wordpress
        image: gcr.io/gke-wordpress-440211/custom-wordpress:latest
        resources:
          requests:
            cpu: "250m"
          limits:
            cpu: "500m"
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.33.1
        command: ["/cloud_sql_proxy", "-instances=gke-wordpress-440211:europe-central2:wordpress-sql-instance=tcp:3306", "-credential_file=/secrets/cloudsql/key.json"]
        volumeMounts:
          - name: cloudsql-instance-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
      volumes:
      - name: cloudsql-instance-credentials
        secret:
          secretName: cloud-sql-sa-key
